# rom-descrambler

./: CMakeLists.txt  README.md  TODO.txt  common.h  descramble.c  hex-output.c  main.c  tui.c
